workspaces/website/src/styles/global.css
:root {
  --base-font-family: Roboto, Helvetica, Arial, sans-serif;
  --base-font-size:   1.2em;
  --base-font-weight: 300;
  --small-font-size:  $base-font-size * 0.875;
  --base-line-height: 1.25rem;

  --spacing-unit: 2em;

  --text-color:       #111;
  --background-color: #f5f5f5;
  --link-color:      #1012a5;

  --mild-color:       lighten($text-color, 25%);
  --mild-color-light: lighten($text-color, 40%);
  font-family: var(--base-font-family);
  font-size: var(--base-font-size);
}

body {
  text-rendering: optimizeLegibility;
  line-height: var(--base-line-height);
  font-weight: var(--base-font-weight);
  color: var(--text-color);
  background-color: var(--background-color);
  /* padding: var(--spacing-unit/4); */

	margin: auto;
	padding: 20px;
	max-width: 38em;
	text-align: left;
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: #444;
}
h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
	color: #222;
}
a {
	color: #3273dc;
}
a:visited {
	color: #8e32dc;
}
nav a {
	margin-right: 10px;
}
nav a:visited {
	color: #3273dc;
}
textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
content {
	line-height: 1.6;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
}
code {
	padding: 2px 5px;
	background-color: #f2f2f2;
}
pre {
	padding: 1rem;
}
pre > code {
	all: unset;
}
blockquote {
	border: 1px solid #999;
	color: #222;
	padding: 2px 0px 2px 20px;
	margin: 0px;
	font-style: italic;
}

.title {
	margin: 0.25em 0 0;
}
hr {
	border-top: 1px solid #ddd;
	margin: 1rem 0;
}
.last-updated-on {
	font-style: italic;
}

ul.dated-list {
	list-style-type: none;
	padding: unset;
}
ul.dated-list li {
	display: flex;
}
ul.dated-list li time {
	flex: 0 0 130px;
	font-size: .9em;
	font-style: italic;
	color: #595959;
}
ul.dated-list li .content {
	flex: 1;
}
ul.dated-list li .content p {
	margin: .25em 0;
	font-size: .9em;
}

ul.actions {
	list-style-type: none;
	padding: unset;
  text-align: right;
  padding: 0;
  margin: 0;
}
ul.actions li {
	margin-left: 10px;
	margin: .6em 1em;
  display: inline-block;
}
ul.actions li a,
ul.actions li a:visited {
	text-decoration: none;
	color: var(--link-color);
}
ul.actions li a img {
	margin-right: .2em;
	width: 1em;
	height: 1em;
	vertical-align: text-top;
}

ul.directories ul {
  padding-inline-start: 2em;
}
ul.directories li.folder {
  list-style-type: '📁 '
}
ul.directories li.folder-open {
  list-style-type: '📂 '
}
ul.directories li.file {
  list-style-type: '📄 '
}

ul.find-me {
	list-style-type: none;
	padding: unset;
}
ul.find-me li {
	margin-left: 10px;
	margin: .6em 1em;
}
ul.find-me li a,
ul.find-me li a:visited {
	text-decoration: none;
	color: var(--link-color);
}
ul.find-me li a img {
	margin-right: .2em;
	width: 1em;
	height: 1em;
	vertical-align: text-top;
}

ul.social-cards {
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: .5em;
  list-style-type: none;
}
ul.social-cards:has(li:nth-of-type(2):last-child) li {
  width: calc(100% / 2 - .5em);
}
/* dl.social-cards:has(dd:nth-of-type(3):last-child) dd {
  width: calc(100% / 3 - .5em);
} */


.github-card {
  line-height: 1.13em;
}
.github-card > div {
  background-color: white !important;
  color: #575757 !important;
  border: 1px solid #ddd;
}
.github-card p {
  line-height: 1.2em;
}
.github-card p:nth-of-type(2)::before {
  content: url('~/assets/logos/github.svg') ' GitHub';
  display: inline-block;
  font-size: .9em;
  margin-right: .3em;
}
.github-card a {
  text-decoration: none;
  color: #575757 !important;
}
.github-card a p,
.github-card a span {
  color: #575757 !important;
}
.github-card b {
  color: inherit;
}

